--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
+libc = "0.2.144"
 palette = "0.6.1"
 slidy = { path = "../slidy" }
 svg = "0.12.1"
