--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.12", features = ["derive"] }
-libc = "0.2.147"
-palette = "0.7.3"
+clap = { version = "^4.5", features = ["derive"] }
+libc = "^0.2"
+palette = "^0.7"
 slidy = { path = "../slidy" }
-svg = "0.14.0"
-thiserror = "1.0.43"
+svg = "^0.18"
+thiserror = "^2.0"
 
 [[bin]]
 name = "slidy"
