--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "^4.5", features = ["derive"] }
+directories = "^6.0.0"
 libc = "^0.2"
 palette = "^0.7"
 slidy = { path = "../slidy" }
