--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "^4.5", features = ["derive"] }
-directories = "^6.0.0"
+directories = "^6.0"
 libc = "^0.2"
 palette = "^0.7"
-slidy = { path = "../slidy" }
+slidy = "^0.3"
 svg = "^0.18"
 thiserror = "^2.0"
 
